--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/android-async-http-1.4.9.jar')
     implementation files('libs/httpclient-4.4.1.1.jar')
+    implementation files('libs/picasso-2.0.0.jar')
 }
